[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "confuse"
author = "Adrian Sampson"
author-email = "adrian@radbox.org"
home-page = "https://github.com/beetbox/confuse"
requires = [
    "pyyaml"
]
description-file = "README.rst"
requires-python = ">=3.9"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
